--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,10 +1,8 @@
 .home {
-    width: 100vw;
-    height: 882px;
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    height: 100vh;
+    display: flex;
+    justify-content: space-around;    
     align-items: center;
-    justify-content: center;
     gap: 20px;
     background-color: #010203;
 }
@@ -14,36 +12,35 @@
     flex-direction: column;
     gap: 50px;
     font-size: 1.5rem;
-    margin: 200px 0 150px 300px;
+    padding-top: 150px;
+
+    
 }
 
 .social a {
     text-decoration: none;
     color: white;
-    padding: 10px;
     border-radius: 5px;
 }
 
-.social a:hover {
-    background: gray;
-}
+
 
 .info {
     color: white;
     max-width: 600px;
-    margin: 150px 0 150px 100px;
     gap: 100px;
+
 }
 
 .info h1 {
     font-size: 4rem;
 }
 
-.info p:nth-child(2) {
+.subTitle {
     font-size: 2.5rem;
 }
 
-.info p:nth-child(3) {
+.description {
     font-size: 1.25rem;
 }
 
@@ -60,13 +57,13 @@
 .photo img {
     width: 400px;
     height: 400px;
-    margin: 150px 200px 150px 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     box-shadow: inset 0 0 0 9px rgb(255 255 255 / 30%);
     justify-self: center;
     animation: profile-animation 8s ease-in-out infinite 1s;
+   
 }
 
 @keyframes profile-animation {
@@ -80,5 +77,204 @@
 
     100% {
         border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+    }
+}
+
+@media screen and (max-width: 1370px) {
+    .info h1 {
+        font-size: 3rem;
+    }
+    
+    .subTitle {
+        font-size: 2rem;
+    }
+    
+    .description {
+        font-size: 1rem;
+    }
+    
+    .hello-btn {
+        width: 125px;
+        height: 60px;
+    }
+    
+    .photo img {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+@media screen and (max-width: 1100px){
+    .info{
+        padding-right: 100px;
+        padding-left: 100px;
+    }
+
+    .photo img{
+        width: 250px;
+        height: 250px;
+        margin-right: 40px;
+    }
+
+    .social{
+        margin-left: 40px;
+    }
+}
+
+@media screen and (max-width: 980px){
+    .info h1 {
+        font-size: 2rem;
+    }
+    
+    .home{
+        margin-top: 50px;
+    }
+
+    .subTitle {
+        font-size: 1.5rem;
+    }
+    
+    .description {
+        font-size: 0.75rem;
+    }
+    
+    .hello-btn {
+        width: 100px;
+        height: 40px;
+    }
+    
+    .photo img {
+        width: 200px;
+        height: 200px;
+        margin-right: 30px;
+    }
+
+    .hello-btn{
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 790px) {
+    .home {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+
+    .social {
+        flex-direction: row;
+        gap: 120px;
+        padding-top: 10px;
+        margin-top: 0;
+    }
+
+    .info {
+        position: relative;
+        top: -120px;
+        order: 2;
+        margin-top: 0;
+    }
+
+    .info h1{
+        font-size: 2.5rem;
+    }
+
+    .subTitle {
+        font-size: 1.75rem;
+    }
+    
+    .description {
+        font-size: 1rem;
+    }
+
+    .photo img {
+        position: relative;
+        top: -30px;
+        right: -30px;
+        order: 1;
+        width: 250px;
+        height: 250px;
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .home {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+    }
+
+    .social {
+        flex-direction: row;
+        gap: 80px;
+        padding-top: 10px;
+        margin-top: 0;
+    }
+
+    .info {
+        position: relative;
+        top: -120px;
+        order: 2;
+        margin-top: 0;
+    }
+
+    .info h1{
+        font-size: 2.25rem;
+    }
+
+    .subTitle {
+        font-size: 1.25rem;
+    }
+    
+    .description {
+        font-size: 0.75rem;
+    }
+
+    .photo img {
+        position: relative;
+        top: -30px;
+        right: -30px;
+        order: 1;
+        width: 200px;
+        height: 200px;
+        margin-top: 0;
+    }
+}
+
+@media screen and (max-width: 490px) {
+
+    .social {
+        flex-direction: row;
+        gap: 70px;
+        padding-top: 10px;
+        margin-top: 0;
+    }
+
+    .info {
+        position: relative;
+        top: -120px;
+        order: 2;
+        margin-top: 0;
+    }
+
+    .info h1{
+        font-size: 1.75rem;
+    }
+
+    .subTitle {
+        font-size: 1.25rem;
+    }
+    
+    .description {
+        font-size: 0.75rem;
+    }
+
+    .photo img {
+        position: relative;
+        top: -50px;
+        right: -15px;   
+        width: 200px;
+        height: 200px;
     }
 }
