--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
+  overflow-y: scroll; 
 }
 
 code {
