--- a/src/components/skills.css
+++ b/src/components/skills.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 900px;
+    height: 100vh;
     color: white;
     background-color: #010203;
     gap: 100px;
@@ -61,6 +61,7 @@
 
     .skills{
         gap: 0px;
+        height: 1080px;
     }
 
     .skills_title{
@@ -71,4 +72,6 @@
         font-size: 0.75rem;
         width: 200px;
     }
+
+
 }
