--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .home {
-    height: 100vh;
+    height: 1000px;
     display: flex;
     justify-content: space-around;    
     align-items: center;
