--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -80,3 +80,95 @@ textarea{
     cursor: pointer;
     background-color: #50C878;
 }
+
+@media screen and (max-width: 1300px){
+    .contact_container{
+        width: 1000px;
+    }
+}
+
+@media screen and (max-width: 1100px){
+    .contact_container{
+        width: 870px;
+    }
+}
+
+@media screen and (max-width: 950px){
+    .contact_container{
+        display: flex;
+        flex-direction: column;
+        width: 600px;
+        height: 1000px;
+    }
+
+    .contact_info{
+        margin-bottom: -10px;
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .contact_info h1{
+        font-size: 1.25rem;
+    }
+
+    .contact_info p{
+        font-size: 0.75rem;
+    }
+
+    .contact_info{
+        width: 400px;
+    }
+
+    .contact_container{
+        width: 400px;
+    }
+
+    input{
+
+        height: 30px;
+        width: 308px;
+        line-height: 20px;
+        font-size: 1rem;
+    }
+    
+    textarea{
+        height: 100px;
+        width: 308px;
+        line-height: 20px;
+        font-size: 1rem;
+    }
+
+    .contact_button{
+        width: 120px;
+        height: 40px;
+        font-size: 0.75rem;
+    }
+}
+
+@media screen and (max-width: 420px){
+    .contact_container{
+        width: 360px;
+        height: 1017px;
+    }
+    
+    .contact_info{
+        width: 200px;
+    }
+
+    .contact_form{
+        width: 235px;
+    }
+
+    .form{
+        width: 200px;
+    }
+
+    input{
+        width: 200px;
+    }
+
+    textarea{
+        width: 200px;
+    }
+}
